--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@types/react-helmet": "^5.0.14",
     "gatsby": "^2.18.12",
+    "gatsby-plugin-graphql-codegen": "^2.0.1",
+    "gatsby-plugin-typescript": "^2.1.23",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
