--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "gatsby": "^2.18.12",
     "gatsby-plugin-graphql-codegen": "^2.0.1",
     "gatsby-plugin-typescript": "^2.1.23",
+    "gatsby-plugin-typography": "^2.3.20",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "typescript": "^3.7.4"
+    "react-typography": "^0.16.19",
+    "typescript": "^3.7.4",
+    "typography": "^0.16.19",
+    "typography-theme-fairy-gates": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
