--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.27",
     "@types/react-helmet": "^5.0.14",
     "gatsby": "^2.18.12",
+    "gatsby-plugin-emotion": "^4.1.18",
     "gatsby-plugin-graphql-codegen": "^2.0.1",
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-plugin-typography": "^2.3.20",
@@ -25,7 +27,8 @@
     "react-typography": "^0.16.19",
     "typescript": "^3.7.4",
     "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "typography-theme-fairy-gates": "^0.16.19",
+    "typography-theme-kirkham": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
