--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@types/react-helmet": "^5.0.14",
+    "@types/typography": "^0.16.3",
     "gatsby": "^2.18.12",
     "gatsby-plugin-emotion": "^4.1.18",
     "gatsby-plugin-graphql-codegen": "^2.0.1",
