--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "ts-node": "^8.5.4",
     "typescript": "^3.7.4",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
