--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
   - 12.13.0
+install:
+  - npm install -g firebase-tools
 after_success:
-  - firebase-ci deploy
+  - firebase deploy
 branches:
   only:
     - master
