--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,11 @@ node_js:
   - 12.13.0
 install:
   - npm install -g firebase-tools
-after_success:
-  - firebase deploy
 branches:
   only:
     - master
 script:
-  - echo "Deploy"
+  - 'yarn build'
 deploy:
   provider: firebase
   skip_cleanup: true
