--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "gatsby": "^2.18.12",
     "gatsby-plugin-emotion": "^4.1.18",
     "gatsby-plugin-graphql-codegen": "^2.0.1",
+    "gatsby-plugin-sass": "^2.1.27",
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-plugin-typography": "^2.3.20",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-remark": "^2.6.45",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
